# gcbm-ecbm

./: .gitignore  README.md  array-job-epg.py  array-job-extended.py  pyproject.toml  pyrightconfig.json  test_grid_experiments_epg.csv  test_grid_experiments_extended.csv  test_ind_cbm_example.py  train_cbm_extended.py  train_epg.py  validate_cbm_epg_slurm_parameters.py  validate_cbm_extended_slurm_parameters.py
architecture/: __init__.py  classic_cbm.py  classification_modules.py  concept_modules.py  encoder_modules.py  extended_cbm.py  segmentation_modules.py  unified_models.py  upsampler_modules.py
cbm_datasets/: __init__.py  cub.py  funny_birds.py  funny_birds_custom.py  funnybirds_img_wo_bodyparts.csv  types.py
thesis-figures/: dataloader.ipynb  dataset.ipynb  experiment_summary_max_values.csv  experiment_summary_max_values_extended.csv  experiment_summary_max_values_extended_softiw.csv  extended_segmentations.ipynb  independent_cbm.ipynb  test_results_extended_test.csv  wandb_history_cache.parquet  wandb_history_cache_extended_softiw.parquet
thesis-figures/epg_cbm/: 0_get_run_ids.ipynb  1_download_save_results.ipynb  2_calc_test_metrics_epg.ipynb  3_results.ipynb  epg.ipynb  runtime_stats.csv
thesis-figures/extended_cbm/: 0_get_run_ids.ipynb  1_download_save_results.ipynb  2_calc_test_metrics_extended.ipynb  3_1_plots_segmentation_benchmark.ipynb  3_2_plots_test.ipynb  3_3_anyup_similarities.ipynb  3_3_plots.ipynb  3_6_joint.ipynb  3_x_aff.ipynb  (+2 more)
utils/: argparser.py  attribution_methods.py  loss.py  others.py  segmentation.py  visualization.py
(+11 files in other folders)
