[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "captum>=0.7.0",
    "clip",
    "datasets>=4.4.1",
    "dehb>=0.1.1",
    "dinov3",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "hydra-core>=1.3.2",
    "ipython>=9.6.0",
    "ipywidgets>=8.1.8",
    "jedi>=0.19.2",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pylance>=0.39.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "termcolor>=3.2.0",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
    "webdataset>=1.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
dinov3 = { path = "../dinov3", editable = true }
